--- a/style.css
+++ b/style.css
@@ -15,8 +15,6 @@ body {
 }
 
 #card {
-  width: 600px;
-  height: 450px;
   box-shadow: 2px 3px 7px 0px rgba(0, 0, 0, 0.35);
   border-radius: 5px;
   overflow: hidden;
@@ -26,28 +24,29 @@ body {
 
 #top-section {
   width: 100%;
-  height: 44%;
+  height: 45%;
   padding: 25px;
   margin-left: 10px;
 }
 
 #bottom-section {
   display: flex;
+  flex-direction: column;
   width: 100%;
-  height: 60%;
+  height: 55%;
   color: white;
 }
 #bottom-left {
-  width: 50%;
   height: 100%;
   background-color: #2bb3b0;
-  padding: 25px;
+  padding: 20px;
+  flex-basis: 50%;
 }
 #bottom-right {
-  width: 50%;
   height: 100%;
   background-color: #31ccc9;
-  padding: 25px;
+  padding: 20px;
+  flex-basis: 50%;
 }
 
 #top-section h2 {
@@ -55,10 +54,11 @@ body {
 }
 #top-section h4 {
   color: #faed53;
+  margin-bottom: 3px;
 }
 #top-section p {
   color: #98a6bd;
-  line-height: 40%;
+  margin-top: 6px;
 }
 
 button {
@@ -69,12 +69,12 @@ button {
   width: 100%;
   border-radius: 5px;
   font-weight: 800;
-  margin-top: 10px;
+  margin-top: 5px;
   box-shadow: 2px 2px 7px 0px rgba(0, 0, 0, 0.35);
 }
 button:hover {
   cursor: pointer;
-  background-color: #D4C846;
+  background-color: #d4c846;
   transform: scale(1.02);
 }
 
@@ -113,5 +113,20 @@ button:hover {
   font-size: 0.9rem;
 }
 
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: #384166; }
+.attribution {
+  font-size: 11px;
+  text-align: center;
+}
+.attribution a {
+  color: #384166;
+}
+
+@media (min-width: 576px) {
+  #card {
+    width: 550px;
+    height: 400px;
+  }
+  #bottom-section {
+    flex-direction: row;
+  }
+}
